<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_home_back">

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/toolbar"
            android:id="@+id/rl_toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_toolbar"
            android:orientation="vertical">
            <include layout="@layout/player_top"
                android:id="@+id/player_top"
                android:visibility="visible"/>
            <com.txtled.gp_a012.widget.CustomButton
                android:id="@+id/rb_music"
                style="@style/menu_rb"
                android:drawableTop="@mipmap/ic_home_music"
                android:layout_marginTop="@dimen/dp_10_y"
                android:text="@string/music" />

            <com.txtled.gp_a012.widget.CustomButton
                android:id="@+id/rb_flame"
                style="@style/menu_rb"
                android:drawableTop="@mipmap/ic_home_fame"
                android:text="@string/flame" />

            <com.txtled.gp_a012.widget.CustomButton
                android:id="@+id/rb_setting"
                style="@style/menu_rb"
                android:drawableTop="@mipmap/ic_home_setting"
                android:text="@string/setting" />
        </LinearLayout>
        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_below="@+id/rl_toolbar">-->
            <!--<include layout="@layout/player_top"-->
            <!--android:id="@+id/player_top"-->
            <!--android:visibility="visible"/>-->

            <!--<RadioGroup-->
                <!--android:id="@+id/radio_group_other"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="@dimen/dp_10_y"-->
                <!--android:background="@android:color/transparent"-->
                <!--android:layout_below="@+id/player_top"-->
                <!--android:orientation="vertical">-->

                <!--<com.txtled.gp_a012.widget.CustomRButton-->
                    <!--android:id="@+id/rb_music"-->
                    <!--style="@style/menu_rb"-->
                    <!--android:drawableTop="@mipmap/ic_home_music"-->
                    <!--android:text="@string/music" />-->

                <!--<com.txtled.gp_a012.widget.CustomRButton-->
                    <!--android:id="@+id/rb_flame"-->
                    <!--style="@style/menu_rb"-->
                    <!--android:drawableTop="@mipmap/ic_home_fame"-->
                    <!--android:text="@string/flame" />-->

                <!--<com.txtled.gp_a012.widget.CustomRButton-->
                    <!--android:id="@+id/rb_setting"-->
                    <!--style="@style/menu_rb"-->
                    <!--android:drawableTop="@mipmap/ic_home_setting"-->
                    <!--android:text="@string/setting" />-->

            <!--</RadioGroup>-->

        <!--</RelativeLayout>-->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@color/colorAccent"
            android:visibility="gone"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@mipmap/ic_setting_backview"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_right">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>